--- a/src/components/main/MainStyles.scss
+++ b/src/components/main/MainStyles.scss
@@ -184,6 +184,7 @@ $charcoal-color: #1b1b1b;
   .location-now-btn {
     font-size: 70%;
     padding: 7.5px 5px;
+    height: 42px;
   }
 // this looks good until 575
 
